--- a/Game/css.css
+++ b/Game/css.css
@@ -1,8 +1,60 @@
+
 h1 {
     text-align: center;
 } 
 
-canvas {
+.gameCanvas {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    
+    
+}
+#container {
     margin: auto;
+    height: 700px;
+    width: 1000px;
+    
+
+}
+#startButton {
+    margin-right: 100px;
+    /* align-self: center; */
+    height: 100px;
+    border: 1px solid #3498db;
+    background: none;
+    
+    font-size: 20px;
+    font-family: "montserrat";
+    cursor: pointer;
+    
+    transition: 0.8s;
+    overflow: hidden;
+    color: black;
+
+    /*                */
+    position: absolute;
+    top: 600px;
+
+    
+    width: 30%;
+}
+.start:hover{
+    color: #ffffff;
+}
+.start:before{
+    content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  background: #3498db;
+  z-index: -1;
+  transition: 0.8s; 
+  top: 0;
+  border-radius: 0 0 50% 50%; 
 }
 
+.start:hover::before{
+    height: 180%;
+}
